--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,114 @@
+absl-py==1.4.0
+annotated-types==0.5.0
+antlr4-python3-runtime==4.9.3
+appdirs==1.4.4
+audioread==3.0.0
+beautifulsoup4==4.12.2
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
 chainer==7.8.1
+charset-normalizer==3.2.0
+ci-sdr==0.0.2
+click==8.1.6
+cmake==3.27.2
+ConfigArgParse==1.7
+contourpy==1.1.0
+ctc-segmentation==1.7.4
+cycler==0.11.0
+Cython==3.0.0
+decorator==5.1.1
+Distance==0.1.3
 editdistance==0.6.2
+einops==0.6.1
+espnet==202304
+espnet-tts-frontend==0.0.3
+fast-bss-eval==0.1.3
 filelock==3.12.2
+fonttools==4.42.0
+g2p-en==2.1.0
 gdown==4.7.1
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+grpcio==1.57.0
 h5py==3.9.0
+humanfriendly==10.0
+hydra-core==1.3.2
+idna==3.4
+importlib-metadata==4.13.0
+importlib-resources==6.0.1
+inflect==7.0.0
+jaconv==0.3.4
+jamo==0.4.1
+Jinja2==3.1.2
+joblib==1.3.2
 kaldiio==2.18.0
+kiwisolver==1.4.4
+lazy-loader==0.3
 librosa==0.10.0.post2
-matplotlib==3.7.1
+lit==16.0.6
+llvmlite==0.40.1
+Markdown==3.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+mpmath==1.3.0
+msgpack==1.0.5
+networkx==3.1
+nltk==3.8.1
+numba==0.57.1
 numpy==1.24.2
-PyYAML==6.0
-resampy==0.4.2
-scikit_learn==1.2.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+omegaconf==2.3.0
+opt-einsum==3.3.0
+packaging==23.1
+Pillow==10.0.0
+pooch==1.6.0
+protobuf==4.24.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==2.1.1
+pydantic-core==2.4.0
+pyparsing==3.0.9
+pypinyin==0.44.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytorch-wpe==0.0.1
+pyworld==0.3.4
+PyYAML==6.0.1
+regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.2.2
 scipy==1.9.3
+sentencepiece==0.1.97
 six==1.16.0
 soundfile==0.12.1
+soupsieve==2.4.1
+soxr==0.3.6
+sympy==1.12
 tensorboard==2.14.0
+tensorboard-data-server==0.7.1
+threadpoolctl==3.2.0
 torch==2.0.1
-tqdm
+torch-complex==0.4.3
+tqdm==4.64.1
+triton==2.0.0
+typeguard==2.13.3
+typing-extensions==4.7.1
+Unidecode==1.3.6
+urllib3==1.26.16
+werkzeug==2.3.7
+zipp==3.16.2
